Changed pull-data to multiple file for a better makefile

--- a/m1-data-preparation/Makefile
+++ b/m1-data-preparation/Makefile
@@ -3,3 +3,6 @@ dataset:
 
 clean:
 	@rm pull-data.err
+
+test:
+	@python pull-links.py 2> pull-data.err | python remove-non-news.py 2>> pull-data.err | python pull-html.py 2>> pull-data.err | python parse-information.py 2>> pull-data.err 1P> data2.json
