Fixed thread problem

--- a/m1-data-preparation/Makefile
+++ b/m1-data-preparation/Makefile
@@ -5,4 +5,7 @@ clean:
 	@rm pull-data.err
 
 test:
-	@python pull-links.py 2> pull-data.err | python remove-non-news.py 2>> pull-data.err | python pull-html.py 2>> pull-data.err | python parse-information.py 2>> pull-data.err 1P> data2.json
+	@python3 pull-links.py 2> pull-data.err | 
+	python3 remove-non-news.py 2>> pull-data.err | 
+	python3 pull-html.py 2>> pull-data.err | 
+	python3 parse-information.py 2>> pull-data.err 1> data2.json
