Some improvements, added threads and progress bar to parse-entities. Added dataset

--- a/m1-data-preparation/Makefile
+++ b/m1-data-preparation/Makefile
@@ -1,14 +1,14 @@
 dataset:
-	@python3 pull-data_old.py 2> pull-data.err
+	@python3 pull-data_old.py 2> pull-data_old.err
 
 clean:
 	@rm pull-data.err
 
 spacy:
-	cat data3.json | python3 parse-entities.py 1> data-parsed-entities.json 2> entities.csv
+	cat data1.json | python3 parse-entities.py 2> spacy.err
 
 cleanads:
-	cat data2.json | python3 clean-ads.py > data3.json
+	cat data.json | python3 clean-ads.py > data1.json
 
 test:
 	@python3 pull-links.py 2> pull-data.err | \
@@ -16,4 +16,4 @@ test:
 	python3 pull-html.py 2>> pull-data.err | \
 	python3 parse-information.py 2>> pull-data.err | \
 	python3 clean-ads.py 2>> pull-data.err | \
-	python3 parse-entities.py 2> entities.csv 1> data2.json
+	python3 parse-entities.py 2>> pull-data.err 1> data.json
