Added json_to_csv to makefile

--- a/m1-data-preparation/Makefile
+++ b/m1-data-preparation/Makefile
@@ -16,4 +16,5 @@ test:
 	python3 pull-html.py 2>> pull-data.err | \
 	python3 parse-information.py 2>> pull-data.err | \
 	python3 clean-ads.py 2>> pull-data.err | \
-	python3 parse-entities.py 2>> pull-data.err 1> data.json
+	python3 parse-entities.py 2>> pull-data.err | \
+	python3 json_to_csv 2>>pull-data.err 1> data.json
